platform/security/policies/validation/block-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-privileged
spec:
  background: true

  rules:
    - name: deny-privileged-containers

      match:
        any:
        - resources:
            kinds:
            - Pod

      validate:
        failureAction: Audit

        message: "Privileged containers are not allowed."

        pattern:
          spec:
            containers:
            - securityContext:
                privileged: false
