platform/security/policies/validation/require-no-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-no-privilege-escalation
spec:
  background: true

  rules:
    - name: disallow-privilege-escalation

      match:
        any:
        - resources:
            kinds:
            - Pod

      validate:
        failureAction: Audit

        message: "allowPrivilegeEscalation must be false."

        pattern:
          spec:
            containers:
            - securityContext:
                allowPrivilegeEscalation: false
