platform/security/policies/validation/require-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:

  name: require-non-root

spec:

  validationFailureAction: Audit

  rules:

  - name: non-root

    match:

      any:

      - resources:

          kinds:

          - Pod
          namespaces:
            - user-service
            - order-service
            - inventory-service
            - payment-service

    validate:

      message: "Containers must run as non-root"

      pattern:

        spec:

          securityContext:

            runAsNonRoot: true
