platform/security/policies/validation/require-seccomp.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-seccomp

spec:
  background: true

  rules:

  - name: require-runtime-default-seccomp

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:

      failureAction: Audit

      message: "seccompProfile.type must be RuntimeDefault."

      pattern:

        spec:

          securityContext:

            seccompProfile:

              type: RuntimeDefault
