platform/security/policies/validation/restrict-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: restrict-capabilities

spec:
  background: true

  rules:

  - name: drop-all-capabilities

    match:

      any:

      - resources:

          kinds:

          - Pod

    validate:

      failureAction: Audit

      message: "Containers must drop ALL Linux capabilities."

      pattern:

        spec:

          containers:

          - securityContext:

              capabilities:

                drop:

                - ALL
