platform/security/policies/validation/restrict-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:

  name: no-latest-tag

spec:

  validationFailureAction: Audit

  rules:

  - name: disallow-latest

    match:

      any:

      - resources:

          kinds:

          - Pod

    validate:

      message: "latest tag is not allowed"

      pattern:

        spec:

          containers:

          - image: "!*:latest"
